--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -773,3 +773,10 @@ div.dataTables_wrapper div.dataTables_paginate {
 	background-color: #b71c1c;
 	box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 67, 54, 0.4);
 }
+
+
+.disable-picker-switch .picker-switch {
+	cursor: default;
+	pointer-events: none;
+}
+
