--- a/app/pages/properties/propertyimage/propertyimage.component.html
+++ b/app/pages/properties/propertyimage/propertyimage.component.html
@@ -15,21 +15,27 @@
                 <i class="material-icons">delete</i>
             </a>
         </div>
+        <userdropzone (fileEvent)="onFileDrop($event)" *ngIf="propertyForm.controls.Images.value.length > 0" class="image-container-tab">
+            <div>
+                <i class="material-icons">photo</i>
+                Drag & Drop To Upload More
+            </div>
+        </userdropzone>
     </div>
     <div class="row">
         <div class="col-xs-12">
             <div [formGroup]="propertyForm" class="text-center" *ngIf="propertyForm.controls.Images.value.length == 0 && loginService.getPermission('Properties/Put')">
-                <label for="upload" class="upload-image">
-                    <i class="material-icons">image</i><br /><br />
-                    <i class="title">Upload a photo of your property</i><br /><br />
-                    <i class="btn btn-success">Upload an Image</i><br />
-                    <input type="file" id="upload" multiple accept="image/jpeg" style="display:none" ng2FileSelect [uploader]="uploader" (change)="fileChange()">
-                </label>
+                <userdropzone (fileEvent)="onFileDrop($event)">
+                    <div>
+                        <i class="material-icons">photo</i>
+                        Drag & Drop To Upload More
+                    </div>
+                </userdropzone>
             </div>
-            <div [formGroup]="propertyForm" class="" *ngIf="propertyForm.controls.Images.value.length && loginService.getPermission('Properties/Put')">
-                <label for="upload_2" class="upload-image">
+            <div [formGroup]="propertyForm" class="" *ngIf="loginService.getPermission('Properties/Put')">
+                <label for="upload" class="upload-image">
                     <i class="btn btn-success">Upload more</i><br />
-                    <input type="file" id="upload_2" multiple accept="image/jpeg" style="display:none" ng2FileSelect [uploader]="uploader" (change)="fileChange()">
+                    <input type="file" id="upload" multiple accept="image/jpeg" style="display:none" ng2FileSelect [uploader]="uploader" (change)="fileChange()">
                 </label>
             </div>
             <div class="loading-gif" [hidden]="!uploader.isUploading">
