--- a/app/pages/properties/propertyimage/propertyimage.component.html
+++ b/app/pages/properties/propertyimage/propertyimage.component.html
@@ -1,5 +1,5 @@
 <div class="card-content">
-    <div class="row" [sortablejs]="propertyForm.controls.Images.value" [sortablejsOptions]="sortablejsOptions" style="display: flex;">
+    <div class="row" [sortablejs]="propertyForm.controls.Images.value" [sortablejsOptions]="sortablejsOptions" [style.display]="(propertyForm.controls.Images.value.length > 0) ? 'flex' : 'none'">
         <div *ngFor="let item of propertyForm.controls.Images.value; let i = index" class="col-xs-3 m-b-15 image-hover">
             <cl-image data-u="image"
                       public-id="{{item.ImageId}}"
@@ -15,7 +15,7 @@
                 <i class="material-icons">delete</i>
             </a>
         </div>
-        <div class="col-xs-3 m-b-15 image-hover" style="display: flex; align-content: stretch;">
+        <div class="col-xs-3 m-b-15 image-hover dropzone-container-image">
             <userdropzone (fileEvent)="onFileDrop($event)" *ngIf="propertyForm.controls.Images.value.length > 0">
                 <div>
                     <i class="material-icons">photo</i>
