Property Images - Drag & Drop fixes

--- a/app/pages/properties/propertyimage/propertyimage.component.css
+++ b/app/pages/properties/propertyimage/propertyimage.component.css
@@ -64,6 +64,10 @@ userdropzone div {
     align-content: stretch;
 }
 
+.row-image {
+    flex-flow: row wrap;
+}
+
 @media (max-width: 1300px) {
     userdropzone:not(.main-dropzone) div {
         display: none;
