--- a/app/pages/properties/propertyimage/propertyimage.component.html
+++ b/app/pages/properties/propertyimage/propertyimage.component.html
@@ -15,7 +15,7 @@
                 <i class="material-icons">delete</i>
             </a>
         </div>
-        <div class="col-xs-3 m-b-15 image-hover dropzone-container-image" [style.minHeight]="((propertyForm.controls.Images.value.length % 4 === 0) ? '250' : '0')+'px'" [style.width]="((propertyForm.controls.Images.value.length % 4 === 0) ? '100' : '25')+'%'">
+        <div class="col-xs-3 m-b-15 image-hover dropzone-container-image" [style.minHeight]="((propertyForm.controls.Images.value.length % 4 === 0) ? '250' : '0')+'px'" [style.width]="((propertyForm.controls.Images.value.length % 4 === 0) ? '100' : ((4-(propertyForm.controls.Images.value.length % 4)) * 25))+'%'">
             <userdropzone (fileEvent)="onFileDrop($event)" *ngIf="propertyForm.controls.Images.value.length > 0">
                 <div>
                     <i class="material-icons">photo</i>
