disabled CheckOut date after init

--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -73,6 +73,8 @@
                                                 [idPicker]="'checkOut'"
                                                 [linkedField]="availabilityForm.controls.CheckIn"
                                                 [disabledDates]="disabledDatesOut"
+                                                [minDate]="minDate"
+                                                [maxDate]="maxDate"
                                                 [field]="availabilityForm.controls.CheckOut"></datetimepicker-field-cmp>
                                     </div>
                                 </div>
