--- a/app/pages/properties/propertyimage/propertyimage.component.css
+++ b/app/pages/properties/propertyimage/propertyimage.component.css
@@ -44,7 +44,7 @@ userdropzone {
     width: 100%;
 }
 
-userdropzone i {
+/*userdropzone i {
     font-size: 60px;
     display: block;
     text-align: center;
@@ -70,13 +70,14 @@ userdropzone div {
 
 @media (max-width: 1300px) {
     userdropzone:not(.main-dropzone) div {
-        display: none;
+        zoom: 0.5;
+        line-height: 21px;
     }
 }
 
 userdropzone.dragging {
     border: 2px dashed #333;
-}
+}*/
 
 
 /* jssor slider arrow navigator skin 05 css */
