--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -57,13 +57,14 @@
                             </div>
                             <div class="card-content">
                                 <div class="row">
-                                    <div class="col-xs-6">
+                                    <div class="col-xs-6" >
                                         <datetimepicker-field-cmp
                                                 [data]="{title: 'Check In'}"
                                                 [classes]="{withIcon: true, disablePickerSwitch: true}"
                                                 [idPicker]="'checkIn'"
                                                 [linkedField]="availabilityForm.controls.CheckOut"
                                                 [disabledDates]="disabledDatesIn"
+                                                (updateDate)="handlerUpdateDate($event, value)"
                                                 [field]="availabilityForm.controls.CheckIn"></datetimepicker-field-cmp>
                                     </div>
                                     <div class="col-xs-6">
@@ -72,7 +73,6 @@
                                                 [classes]="{withIcon: false, disablePickerSwitch: true}"
                                                 [idPicker]="'checkOut'"
                                                 [linkedField]="availabilityForm.controls.CheckIn"
-                                                [disabledDates]="disabledDatesOut"
                                                 [minDate]="minDate"
                                                 [maxDate]="maxDate"
                                                 [field]="availabilityForm.controls.CheckOut"></datetimepicker-field-cmp>
