--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -258,7 +258,7 @@
                 </div>
 
                 <div class="tab-pane" id="heading-size_rooms">
-                    <div [formGroup]="propertyForm" class="p-l-r-20">
+                    <div [formGroup]="propertyForm">
                         <div class="row">
                             <div class="col-xs-6">
                                 <legend>General</legend>
@@ -304,20 +304,20 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div formArrayName="Rooms" class="m-t-25 col-xs-12">
+                                    <div formArrayName="Rooms" class="m-t-25 m-b-20 col-xs-12">
                                         <label>Bedroom Information</label>
                                         <div class="row"
                                              *ngFor="let control of propertyForm.controls.Rooms.controls; let i = index">
                                             <div *ngIf="control.controls.PropertyRoomType.value == 1">
                                                 <div class="">
-                                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                                    <div class="col-xs-12">
                                                         <div class="form-group label-floating">
                                                             <label class="control-label">Bedroom Name</label>
                                                             <input type="text" class="form-control"
                                                                    [formControl]="control.controls.Name">
                                                         </div>
                                                     </div>
-                                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                                    <div class="col-xs-12">
                                                         <div class="form-group label-floating">
                                                             <label class="control-label">Bedroom Description</label>
                                                             <textarea class="form-control"
@@ -327,8 +327,8 @@
                                                         </div>
                                                     </div>
                                                     <div *ngIf="loginService.getPermission('Properties/Put')"
-                                                         class="col-sm-12 col-md-4 col-lg-4">
-                                                        <button class="btn btn-success btn-icon pull-right" type="button"
+                                                         class="col-xs-12">
+                                                        <button class="btn btn-success btn-icon" type="button"
                                                                 (click)="addBedroom()" *ngIf="false">
                                                             <i class="material-icons">add</i> Add BEDROOM
                                                         </button>
@@ -364,19 +364,19 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div formArrayName="Rooms" class="m-t-25">
+                                    <div formArrayName="Rooms" class="m-t-25 col-xs-12">
                                         <label>Bathroom Information</label>
                                         <div class="row"
                                              *ngFor="let control of propertyForm.controls.Rooms.controls; let i = index">
                                             <div *ngIf="control.controls.PropertyRoomType.value == 2">
-                                                <div class="col-sm-12 col-md-4 col-lg-4">
+                                                <div class="col-xs-12">
                                                     <div class="form-group label-floating">
                                                         <label class="control-label">Bathroom Name</label>
                                                         <input type="text" class="form-control"
                                                                [formControl]="control.controls.Name">
                                                     </div>
                                                 </div>
-                                                <div class="col-sm-12 col-md-4 col-lg-4">
+                                                <div class="col-xs-12">
                                                     <div class="form-group label-floating">
                                                         <label class="control-label">Bathroom Description</label>
                                                         <textarea class="form-control" [formControl]="control.controls.Description"
@@ -384,8 +384,8 @@
                                                     </div>
                                                 </div>
                                                 <div *ngIf="loginService.getPermission('Properties/Put')"
-                                                     class="col-sm-12 col-md-4 col-lg-4">
-                                                    <button class="btn btn-success btn-icon pull-right" type="button"
+                                                     class="col-xs-12">
+                                                    <button class="btn btn-success btn-icon" type="button"
                                                             (click)="addBathroom()" *ngIf="false">
                                                         <i class="material-icons">add</i> Add BATHROOM
                                                     </button>
@@ -421,15 +421,15 @@
                                         <label>Kitchen Information</label>
                                         <div class="row"
                                              *ngFor="let control of propertyForm.controls.Rooms.controls; let i = index">
-                                            <div *ngIf="control.controls.PropertyRoomType.value == 3" class="col-xs-12">
-                                                <div class="col-sm-12 col-md-4 col-lg-4">
+                                            <div *ngIf="control.controls.PropertyRoomType.value == 3">
+                                                <div class="col-xs-12">
                                                     <div class="form-group label-floating">
                                                         <label class="control-label">Kitchen Name</label>
                                                         <input type="text" class="form-control"
                                                                [formControl]="control.controls.Name">
                                                     </div>
                                                 </div>
-                                                <div class="col-sm-12 col-md-4 col-lg-4">
+                                                <div class="col-xs-12">
                                                     <div class="form-group label-floating">
                                                         <label class="control-label">Kitchen Description</label>
                                                         <textarea class="form-control" [formControl]="control.controls.Description"
@@ -437,8 +437,8 @@
                                                     </div>
                                                 </div>
                                                 <div *ngIf="loginService.getPermission('Properties/Put')"
-                                                     class="col-sm-12 col-md-4 col-lg-4">
-                                                    <button class="btn btn-success btn-icon pull-right" type="button"
+                                                     class="col-xs-12">
+                                                    <button class="btn btn-success btn-icon" type="button"
                                                             (click)="addKitchen()" *ngIf="false">
                                                         <i class="material-icons">add</i> Add Kitchen
                                                     </button>
@@ -450,7 +450,7 @@
                                             </div>
                                         </div>
                                         <div *ngIf="loginService.getPermission('Properties/Put')" class="row">
-                                            <div class="col-sm-12 col-md-12 col-lg-12">
+                                            <div class="col-xs-12">
                                                 <button class="btn btn-success btn-icon" type="button" (click)="addKitchen()">
                                                     <i class="material-icons">add</i> Add Kitchen
                                                 </button>
