--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -162,6 +162,9 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 .m-b-15 {
 	margin-bottom: 15px !important;
 }
+.m-b-20 {
+	margin-bottom: 20px !important;
+}
 .m-b-30 {
 	margin-bottom: 30px !important;
 }
