Disable menu options for stage 1 launch

--- a/app/shared/components/sidebar/sidebar.component.css
+++ b/app/shared/components/sidebar/sidebar.component.css
@@ -48,3 +48,10 @@ p, span, a {
     background: none;
 }
 
+.nav li[disabled] > a:hover {
+    background: inherit;
+}
+
+.nav li[disabled] > a i, .nav li[disabled] > a p {
+    color: #3a3a3a;
+}
