--- a/app/shared/components/sidebar/sidebar.component.html
+++ b/app/shared/components/sidebar/sidebar.component.html
@@ -49,7 +49,7 @@
     </div>
     <div class="nav-container">
         <ul class="nav">
-            <li *ngFor="let item of menuItems" routerLinkActive="active">
+            <li *ngFor="let item of menuItems" routerLinkActive="active" [attr.disabled]="item.disable">
                 <a *ngIf="!item.children && !item.disable" [routerLink]="['/' + item.path]">
                     <i class="material-icons">{{item.icon}}</i>
                     <p>{{item.title}}</p>
