--- a/app/shared/components/header/header.component.css
+++ b/app/shared/components/header/header.component.css
@@ -30,3 +30,10 @@
     -moz-box-shadow: 0px 7px 12px 0px rgba(255, 193, 7,.4) !important;
     box-shadow: 0px 7px 12px 0px rgba(255, 193, 7,.4) !important;
 }
+.nav li[disabled] > a:hover {
+    background: inherit;
+}
+
+.nav li[disabled] > a i, .nav li[disabled] > a p {
+    color: #999999;
+}
