--- a/app/shared/components/header/header.component.html
+++ b/app/shared/components/header/header.component.html
@@ -20,16 +20,16 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li>
+                <!--li>
                     <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">dashboard</i>
                         <p class="hidden-lg hidden-md">Dashboard</p>
                     </a>
-                </li>
-                <li class="dropdown">
+                </li-->
+                <li class="dropdown" disabled="true">
                     <a href="#notification" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="material-icons">mail</i>
-                        <span class="notification">5</span>
+                        <!--span class="notification">5</span-->
                         <p class="hidden-lg hidden-md">
                             Notifications
                             <b class="caret"></b>
