Housekeeping API changes

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -498,6 +498,11 @@
                                         <input type="radio" [value]="true" formControlName="SmokingAllowed">Smoking Allowed
                                     </label>
                                 </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" [value]="null" formControlName="SmokingAllowed">Unknown
+                                    </label>
+                                </div>
                             </div>
                             <div class="checkbox col-xs-3">
                                 <div class="radio">
@@ -508,6 +513,11 @@
                                 <div class="radio">
                                     <label>
                                         <input type="radio" [value]="true" formControlName="ChildrenAllowed">Children Allowed
+                                    </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" [value]="null" formControlName="ChildrenAllowed">Unknown
                                     </label>
                                 </div>
                             </div>
@@ -522,6 +532,11 @@
                                         <input type="radio" [value]="true" formControlName="PetsAllowed">Pets Welcome
                                     </label>
                                 </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" [value]="null" formControlName="PetsAllowed">Unknown
+                                    </label>
+                                </div>
                             </div>
                             <div class="checkbox col-xs-3">
                                 <div class="radio">
@@ -534,6 +549,11 @@
                                         <input type="radio" [value]="true" formControlName="WheelchairAccessible">Wheelchair Accessible
                                     </label>
                                 </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" [value]="null" formControlName="WheelchairAccessible">Unknown
+                                    </label>
+                                </div>
                             </div>
                             <div class="checkbox col-xs-3">
                                 <div class="radio">
@@ -544,6 +564,11 @@
                                 <div class="radio">
                                     <label>
                                         <input type="radio" [value]="true" formControlName="EventsAllowed">Events Allowed
+                                    </label>
+                                </div>
+                                <div class="radio">
+                                    <label>
+                                        <input type="radio" [value]="null" formControlName="EventsAllowed">Unknown
                                     </label>
                                 </div>
                             </div>
