Marketing tab bug

--- a/app/pages/properties/marketing/propertymarketing.component.html
+++ b/app/pages/properties/marketing/propertymarketing.component.html
@@ -12,7 +12,7 @@
         <div class="col-xs-12">
             <div class="form-group label-floating"
                  [ngClass]="{'form-error': !propertyForm.controls['PropertyAssetsUrl'].valid}">
-                <label class="control-label">Property assets URL</label>
+                <label class="control-label">Property Assets URL</label>
                 <input type="text" class="form-control" formControlName="PropertyAssetsUrl" #agencyUrl>
             </div>
         </div>
