Properties Available : Update 'type'

--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -82,7 +82,7 @@
                                     <div class="col-xs-12">
                                         <singleselect-field-cmp
                                                 [dataList]="calendarEntryTypes"
-                                                [options]="{title: 'Update type', default: 'Internal Booking'}"
+                                                [options]="{title: 'Type', default: 'Other'}"
                                                 [errorForm]="errorForm"
                                                 [field]="availabilityForm.controls.EntryType"></singleselect-field-cmp>
                                     </div>
