Properties Availability - Agency View

--- a/app/pages/properties/availability/availability.component.html
+++ b/app/pages/properties/availability/availability.component.html
@@ -1,6 +1,6 @@
 <div class="main-content">
     <div class="container-fluid">
-        <div class="toolbar row">
+        <div *ngIf="!isAgent" class="toolbar row">
             <div class="col-xs-12 buttons-bar">
                 <button
                         class="btn btn-simple btn-switch btn-icon"
