--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -19,7 +19,7 @@
                             <h4 class="card-title m-t-15" *ngIf="search.value">Properties Search Results for
                                 '{{search.value}}'</h4>
                         </div>
-                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xs-offset-1 col-sm-offset-1 col-md-offset-1 col-lg-offset-0">
                             <div class="form-group label-floating m-r-25">
                                 <label class="control-label">Search</label>
                                 <input id="datatableSearch" type="text" class="form-control" #search>
