change contacts fields

--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -234,7 +234,7 @@
                                 <singleselect-field-cmp [dataList]="PropertyContactTypes"
                                                         [errorForm]="errorForm"
                                                         [options]="{title: 'Contact Type', default: 'Nothing selected'}"
-                                                        [field]="control.controls.PropertyContactType"></singleselect-field-cmp>
+                                                        [field]="control.controls.ContactType"></singleselect-field-cmp>
                                 <!--<input type="text" class="form-control" [formControl]="control.controls.JobTitle">-->
                             </div>
                             <div class="form-group label-floating">
